...

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_director"
                        android:layout_width="146dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:maxLines="3"
                        android:textColor="@color/black"
                        tools:text="@string/director" />
...
